2011-06-28  6.7.0-10 Cristy  <quetzlzacatenango@image...>
  * Properly allocate points when render text with large font size (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18997).

2011-06-25  6.7.0-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-9.

2011-06-18  6.7.0-9 Cristy  <quetzlzacatenango@image...>
  * Defend against corrupt PSD resource blocks.

2011-06-15  6.7.0-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-8.

2011-06-14  6.7.0-8 Anthony Thyssen <A.Thyssen@griffith...>
  * Added Initial implementation of Cylinder to/from Plane 3D Distorts
    Includes derivative (scaled lookup), and anti-aliased horizon (validity)
    Currently can NOT handle extractions from full 360 cylinder panoramas.

2011-06-13  6.7.0-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-7.

2011-06-09  6.7.0-7 Cristy  <quetzlzacatenango@image...>
  * Fixed "conversion from unsigned __int64 to double not implemented"
    so IM can compile under VisualStudio 6.

2011-06-08  6.7.0-7 Glenn Randers-Pehrson <glennrp@image...>
  * The PNG encoder would sometimes make black pixels transparent when some
    other gray level was supposed to be the transparent color (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18900).
    This occurred only with 1, 2, 4-bit grayscale images with Q16 or Q32
    builds.

2011-06-08  6.7.0-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-6.

2011-06-08  6.7.0-6 Cristy  <quetzlzacatenango@image...>
  * Fix transient error for composite over operator.

2011-06-07  6.7.0-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-5.

2011-06-07  6.7.0-5 Cristy  <quetzlzacatenango@image...>
  * Fix one-off bug in option parser (reference
    http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=609177).
  * Transient bug with composite over in magick/composite-private.h.

2011-06-06  6.7.0-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-4.
